<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_new_chat"
        android:icon="@drawable/ic_add"
        android:title="@string/main_menu_new_chat"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history"
        android:title="@string/main_menu_history"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_tasks"
        android:title="@string/main_menu_tasks"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tools"
        android:title="@string/main_menu_tools"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_notes"
        android:title="@string/main_menu_notes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/main_menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/main_menu_about"
        app:showAsAction="never" />

</menu>
