<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/md3_surface"
        app:title="@string/notes_title"
        app:titleTextColor="@color/text_primary"
        app:navigationIconTint="@color/text_primary" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingHorizontal="@dimen/space_lg"
            android:paddingTop="@dimen/space_lg"
            android:paddingBottom="80dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/notesEmptyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/note_empty_state"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            android:visibility="gone" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/notesFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/space_xl"
            android:contentDescription="@string/note_new"
            app:srcCompat="@drawable/ic_add"
            app:backgroundTint="@color/md3_primary"
            app:tint="@color/md3_on_primary" />
    </FrameLayout>
</LinearLayout>
